# lobster-configurator

./: Makefile.am  Makefile.in  Makefile.inc  aclocal.m4  autogen.sh  callbacks.c  callbacks.h  config.h.in  configure  configure.in  interface.c  interface.h  lobster-configurator.desktop.in  lobster-configurator.glade  lobster-configurator.gladep  lobster-configurator.spec.in  lobster.c  lobster.h  lobsterio.c  lobsterio.h  main.c
po/: LINGUAS  de.po  es.po  fr.po  it.po  ja.po  ko.po  nl.po  zh_CN.po  zh_TW.po
